# pyforge-scaffold

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
scripts/: setup.py
src/pyforge/: cli.py
tests/: test_dynamic_versioning.py
